// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DeleteAcountDialog rendering tests candelete false - test 1`] = `
<div>
  <div
    class="space-y-3"
    data-testid="delete-account-dialog"
  >
    <div
      class="flex items-start gap-3 rounded-lg border border-amber-200 bg-amber-50 px-4 py-3 dark:border-amber-800/60 dark:bg-amber-950/40"
      data-testid="delete-blocked-notice"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-lock mt-0.5 h-4 w-4 shrink-0 text-amber-600 dark:text-amber-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="11"
          rx="2"
          ry="2"
          width="18"
          x="3"
          y="11"
        />
        <path
          d="M7 11V7a5 5 0 0 1 10 0v4"
        />
      </svg>
      <div
        class="space-y-1"
      >
        <p
          class="text-sm font-medium text-amber-900 dark:text-amber-100"
        >
          Löschen nicht möglich
        </p>
        <p
          class="text-sm text-amber-700 dark:text-amber-300"
        >
          Ihr Konto hat ein aktives Abonnement. Bitte kündigen Sie zuerst Ihr Abo, bevor Sie das Konto löschen.
           
          <a
            class="font-medium underline underline-offset-4 hover:text-amber-900 dark:hover:text-amber-100"
            data-testid="subscription-link"
            href="/settings/subscription"
          >
            Zum Abonnement
          </a>
        </p>
      </div>
    </div>
    <div
      data-slot="alert-dialog"
      data-testid="mock-react-alert-dialog-root"
    >
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-destructive text-white hover:bg-destructive/90 focus-visible:ring-destructive/20 dark:focus-visible:ring-destructive/40 dark:bg-destructive/60 h-9 px-4 py-2 has-[>svg]:px-3 cursor-pointer disabled:cursor-not-allowed"
        data-slot="button"
        data-testid="delete-btn"
        disabled=""
      >
        Konto löschen
      </button>
      <div
        data-slot="alert-dialog-portal"
        data-testid="mock-react-alert-dialog-portal"
      >
        <div
          class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
          data-slot="alert-dialog-overlay"
          data-testid="mock-react-alert-dialog-overlay"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DeleteAcountDialog rendering tests candelete true - test 1`] = `
<div>
  <div
    class="space-y-3"
    data-testid="delete-account-dialog"
  >
    <div
      data-slot="alert-dialog"
      data-testid="mock-react-alert-dialog-root"
    >
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-destructive text-white hover:bg-destructive/90 focus-visible:ring-destructive/20 dark:focus-visible:ring-destructive/40 dark:bg-destructive/60 h-9 px-4 py-2 has-[>svg]:px-3 cursor-pointer disabled:cursor-not-allowed"
        data-slot="button"
        data-testid="delete-btn"
      >
        Konto löschen
      </button>
      <div
        data-slot="alert-dialog-portal"
        data-testid="mock-react-alert-dialog-portal"
      >
        <div
          class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
          data-slot="alert-dialog-overlay"
          data-testid="mock-react-alert-dialog-overlay"
        />
      </div>
    </div>
  </div>
</div>
`;
